--- a/notebooks/traning.ipynb
+++ b/notebooks/traning.ipynb
@@ -239,48 +239,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'file_path': 0.9672986324853983}\n",
-      "{'file_path': 0.9670258924019541}\n",
-      "{'file_path': 0.9595198129895981}\n",
-      "{'file_path': 0.9570360577525514}\n",
-      "{'file_path': 0.952800732092327}\n",
-      "{'file_path': 0.9474046506845468}\n",
-      "{'file_path': 0.9382398319848412}\n",
-      "{'file_path': 0.9230000569486032}\n",
-      "{'uri_path': 0.0627825225618362}\n",
-      "{'country': 0.026163066739920603}\n",
-      "{'country': 0.02110335907730748}\n",
-      "{'ssn': 0.019974211713114514}\n",
-      "{'country': 0.015456413574846548}\n",
-      "{'ssn': 0.014924846693505365}\n",
-      "{'name': 0.012327869147228566}\n",
-      "{'name': 0.010669271093478231}\n",
-      "{'uri_path': 0.008741792470512329}\n",
-      "{'email': 0.007535201718827537}\n",
-      "{'email': 0.00749207020618885}\n",
-      "{'name': 0.0060818489474674655}\n",
-      "{'name': 0.006040639613651656}\n",
-      "{'ssn': 0.005191725419930729}\n",
-      "{'name': 0.004643460096482725}\n",
-      "{'country': 0.0035583986268451604}\n"
+      "https://www.google.com\n",
+      "https://www.facebook.com/login\n",
+      "http://docs.readthedocs.io\n",
+      "https://bleacherreport.com/mlb/yankees\n",
+      "{'url': 0.9965090533389461}\n",
+      "{'url': 0.9718786787305261}\n",
+      "{'url': 0.9249570250106766}\n",
+      "{'url': 0.5510485766521571}\n",
+      "{'file_path': 0.436548769015368}\n",
+      "{'file_path': 0.061472157282970535}\n"
      ]
     }
    ],
    "source": [
-    "# testers = ['090-76-8548']\n",
-    "# testers = ['www.google.com', 'www.facebook.com/ddude', 'docs.readthedocs.io', 'bleacherreport.com/mlb']\n",
+    "# testers = ['121-71-8228']\n",
+    "testers = ['https://www.google.com', 'https://www.facebook.com/login', 'http://docs.readthedocs.io', 'https://bleacherreport.com/mlb/yankees']\n",
     "# testers = ['michaelahirsch@gmail.com', 'lh685@georgetown.edu', 'michael.hirsch@elastic.co', 'a@queryunderstanding.ai']\n",
-    "# testers = ['364 south 1st street, brooklyn, ny, USA, 10012', '45 west 27th street', '2167 33rd st, apt 4c, astoria, ny, 11105', '1 world trade center, ny, ny', ]\n",
+    "#testers = ['364 south 1st street, brooklyn, ny, USA, 10012', '45 west 27th street', '2167 33rd st, apt 4c, astoria, ny, 11105', '1 world trade center, ny, ny', ]\n",
     "# testers = ['london', 'new york', 'paris', 'reno']\n",
     "# testers = ['Florida', 'New York', 'Illinois', 'New Hampshire', 'California', 'Texas', 'tennessee', 'indiana', 'kentucky']\n",
-    "testers = ['/usr/bin/sudo', '/usr/lib/jvm/java-8-oracle/jre/bin/java', '/usr/lib/jvm/java-1.8-openjdk/jre/bin/java', '/bin/cat', '/bin/bash', '/usr/bin/env', '/usr/bin/python2.7', '/usr/bin/python3.5']\n",
+    "# testers = ['/usr/bin/sudo', '/usr/lib/jvm/java-8-oracle/jre/bin/java', '/usr/lib/jvm/java-1.8-openjdk/jre/bin/java', '/bin/cat', '/bin/bash', '/usr/bin/env', '/usr/bin/python2.7', '/usr/bin/python3.5']\n",
+    "# testers = ['michael hirsch', 'christopher serna', 'linda huber', 'jenna hirsch', 'steve dodson']\n",
     "classes = []\n",
     "for tester in testers:\n",
     "    X = text_clf.predict_proba([tester])[0]\n",
@@ -288,8 +275,10 @@
     "    xy = [{y: x} for x, y in sorted(zip(X,Y), reverse=True)]\n",
     "    for th in xy[:3]:\n",
     "        classes.append(th)\n",
-    "        \n",
-    "for aa in sorted(classes, key=lambda x: list(x.values())[0], reverse=True):\n",
+    "\n",
+    "for t in testers:\n",
+    "    print(t)\n",
+    "for aa in sorted(classes, key=lambda x: list(x.values())[0], reverse=True)[:6]:\n",
     "    print(aa)"
    ]
   },
